# sam

./: .dir-locals.el  .editorconfig  .gitignore  .gitmodules  HACKING.md  Makefile.am  README.md  SAM.md  assembler.go  average.yaml  basic_block.yaml  codegen.go  config.vapi  configure.ac  double_list.yaml  expr.sal  factorial_fn.sal  factorial_iter.yaml  factorial_loop.sal  factorial_rec.yaml  go.mod  go.sum  graphics.sal  lexer.go  lexer_test.go  main.go  main.vala  mksam  push.yaml  pyproject.toml  run-test  sal.go  sam.h  sam.vapi  sam_debug.c  sam_main.c  sam_main.x  sam_opcodes.h  sam_private.h  sam_run.c  (+14 more)
.github/workflows/: ci.yml
Dog/: .gitignore
Dog/glcdMakeBitmap/: glcdMakeBitmap.pde
EMF2014/: .gitignore  AppManager.cpp  Makefile.am  SamApp.cpp  SamApp.h  TiLDA_64x128.h  basic_block.yaml  configure.ac  factorial_iter.yaml  factorial_rec.yaml  graphics.yaml  mksam  push.yaml  run-test  sam.c  sam.h  sam_debug.c  sam_main.x  sam_opcodes.h  sam_private.h  sam_program.h  sam_program.yaml  sam_registers.h  sam_run.c  sam_storage.c  sam_traps.c  sam_traps.cpp  sam_traps.h  sam_traps.x  samc  screen_graphics-expected.pbm  screen_graphics.yaml  screen_levy-c-expected.pbm  screen_levy-c.yaml  screen_turtle-demo.yaml  swap.yaml  times.yaml  turtle-demo.yaml  turtle.yaml
EMF2014/Dog/: README.md  glcdmakebitmap
doc/: .gitignore  Makefile.am  latexmkrc  sam.tex
libsam/: .gitignore  Makefile.am  array.c  blob.c  closure.c  config.h  debug.c  frame.c  iter.c  map.c  nanovg.c  private.h  run.c  run.h  sam.go  sam.h  sam_debug.c  sam_opcodes.h  sam_private.h  sam_registers.h  sam_run.c  sam_sdl.h  sam_storage.c  sam_traps.c  sam_traps.h  sdl.c  sdl_private.h  stack.c  state.c  storage.c  string.c  tbl_opts.h  traps.c  traps_audio.h  traps_basic.c  traps_basic.h  traps_graphics.c  traps_graphics.h  traps_input.h  traps_math.c  (+4 more)
sam/: README.md  __init__.py  __main__.py  assembler.py  pubspec.yaml  run.py  sam_ctypes.py  warnings_util.py
sam/android/app/: build.gradle
sam/android/app/src/main/: AndroidManifest.xml
sam/android/app/src/main/kotlin/org/sc3d/sam/: MainActivity.kt
sam/android/app/src/profile/: AndroidManifest.xml
sam/ios/Runner.xcodeproj/: project.pbxproj
sam/linux/: CMakeLists.txt  my_application.cc
sam/subcommand/: __init__.py
sam/web/: index.html  manifest.json
test/: .gitignore  Makefile.am  ackermann.sal  audio.sal  average.sal  average.yaml  basic_block.sal  basic_block.yaml  double_list.sal  double_list.yaml  empty_loop.sal  expr.sal  factorial_iter.sal  factorial_iter.yaml  factorial_rec.sal  factorial_rec.yaml  fizzbuzz.sal  iter.sal  keyboard.sal  map.sal  map.yaml  map_asm.sal  mutated_capture.sal  quote.sal  quote.yaml  repeated_closure.sal  run-test  screen_graphics.sal  screen_graphics.sal-expected.pbm  screen_graphics.yaml  screen_levy-c.sal  screen_levy-c.yaml  screen_levy-c.yaml-expected.pbm  screen_turtle-demo.sal  screen_turtle-demo.yaml  screen_turtle-demo.yaml-expected.pbm  set.sal  set.yaml  stack.sal  stack.yaml  (+5 more)
tests/: test_sam.py  testutils.py
tests/test-files/: greeting-goodbye-expected.txt
